--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,14 +31,19 @@ jobs:
       - name: 设置 Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
-          cache: 'npm'
+          node-version: '22'
+          cache: 'pnpm'
+
+      - name: 安装 pnpm
+          uses: pnpm/action-setup@v3
+          with:
+            version: 9
 
       - name: 安装依赖
-        run: npm ci
+        run: pnpm install
 
       - name: 构建 Astro 网站
-        run: npm run build
+        run: pnpm build
 
       - name: 上传构建结果
         uses: actions/upload-pages-artifact@v3
